
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.0.9 Beta11 - 2010-06-28
---------------------------------
* Windows 7 Explorer can be launched with admin rights by cheating the registry
  (AppID\\{CDCBCFCA-3CDC-436f-A4E2-0E02075250C2}","RunAs") THANKS to Junne!!!
* SuRunExtDll export functions wait for Initproc to be done

SuRun 1.2.0.9 Beta10 - 2010-01-12
---------------------------------
* FIX: SuRuns second service instance did not realize if the client process 
    has admin rights and thus it asked the user to become a SuRunners member.

SuRun 1.2.0.9 Beta 9 - 2010-01-11
---------------------------------
* NEW: Local System is accepted as user for Backup/Restore
* NEW: If "Start the program automagically with elevated rights." and "NEVER 
  start this program with elevated rights." are both checked, SuRuns Hooks 
  directly start the program with the rights of the hooked user process.
  (Automagic starts App "non elevated" on "AutoExec" and "AutoCancel")
* CHG: Updated polish language (special characters)
* FIX: Made SuRuns Tray symbol better BlackBox (bBBlean) taskbar compatible
* FIX: SuRun keeps WatchDog happy when scanning for domain users
* FIX: Fixed white backgroud color in SuRun's dialogs

SuRun 1.2.0.9 Beta 8 - 2009-11-23
---------------------------------
*NEW: POLISH resources by junne
*CHG: Updated Dutch resources by Stephan Paternotte
*FIX: Require the user's password after timeout and in domains for approved 
  programs GFP'ed silently

SuRun 1.2.0.9 Beta 7 - 2009-10-18
---------------------------------
* FIX: IAT-Hook initialisation uses an exception filter that restarts 